--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 Introduction
-This is Jeff Hetherly's custom ROOT library. It contains several functions and classes that
-aid in analyzing high energy physics data. All macros are meant to be used in their compiled
-form and may be too complex for the CINT interpreter. To aid in the compilation of all the
-source code, a macro entitled 'CompileSource.C' can be executed from the command line by
-'root -q -b -l CompileSource.C'. All functions and classes are available in python from the
-lib/python/HAL.py module. Furthermore, everything lives in the 'HAL' namespace. HAL stands
+This is Jeff Hetherly's custom ROOT library. It contains several functions and classes
+that aid in analyzing high energy physics data. All macros are meant to be used in their
+compiled form and may be too complex for the CINT interpreter. To aid in the compilation
+of all the source code, a macro entitled 'CompileSource.C' can be executed from the
+command line by 'root -q -b -l CompileSource.C'. All functions and classes are available
+in python from the lib/python/HAL.py module. Furthermore, everything lives in the 'HAL'
+namespace. HAL stands
 for
 H - H.E.P.
 A - Analysis
@@ -14,8 +15,8 @@ villian. But, I personally think this bit of software is far less pernicious.
 
 Requirements and 'Installation'
 This software requires a working version of ROOT along with a compatable version of python
-if one is to use HAL.py (in other words, you need to be able to use PyROOT from anywhere in
-your system). Additionally, it requires a few modifications to your ROOT and python
+if one is to use HAL.py (in other words, you need to be able to use PyROOT from anywhere
+in your system). Additionally, it requires a few modifications to your ROOT and python
 environments. Here are the steps to 'installing' this software:
 1. Run the CompileSource.C macro as described above
 2. Add the 'lib' folder to your Unix.*.Root.DynamicPath (or Windows equivalent) in .rootrc
