added sorting algo

--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,1 +1,6 @@
 \hypertarget{index_intro_sec}{}\section{Introduction}\label{index_intro_sec}
+This a custom R\-O\-O\-T library that provides a framework for physics analysis. It contains several functions and classes that aid in analyzing high energy physics data. To aid in the compilation of all the source code, a macro entitled {\ttfamily Compile\-Source.\-C} can be executed from the command line. All functions and classes are available in python from the {\ttfamily lib/\-H\-A\-L.\-py} module. Furthermore, everything lives in the 'H\-A\-L' namespace. H\-A\-L stands for\par
+ H -\/ H.\-E.\-P.\par
+ A -\/ Analysis\par
+ L -\/ Library\par
+ Of course, this is also a thinly veiled reference to the villian in the classic \char`\"{}2001\-: A Space Odyssey.\char`\"{} But, I personally think this bit of software is far less pernicious 
